2004-12-23  Mike Kestner  <mkestner@novell.com>

	* glib/ClassInitializerAttribute.cs : new attr for identifying type.
	inialization methods to be run by RegisterGType.
	* glib/Makefile.am : add file.
	* glib/Object.cs : add private method to invoke ClassInitializers.
	* gtk/glue/widget.c : some new glue for binding registration.
	* gtk/BindingAttribute.cs : new attr for registering key bindings.
	* gtk/Makefile.am : add file.
	* gtk/Widget.custom : add ClassInitializer method to scan types
	for [Binding] and register key bindings.

2004-12-22  Dan Winship  <danw@novell.com>

	* generator/Signal.cs: fix some WriteLine()s that should have been
	Write()s

2004-12-22  Dan Winship  <danw@novell.com>

	* sources/gtk-sharp-sources.xml: exclude a bunch of uninstalled
	gtk headers.

	* gtk/gtk-api.raw: regen

	* gtk/Gtk.metadata: Remove some explicit hiding of things that
	shouldn't have been there anyway. Hide a few types that just show
	up as unusable stubs.

2004-12-22  Mike Kestner  <mkestner@novell.com>

	* gdk/gdk-api.raw : update enum values.
	* gnome/gnome-api.raw : update enum values.
	* gtk/gtk-api.raw : update enum values.
	* pango/pango-api.raw : update enum values.
	* parser/gapi2xml.pl : pull whitespace out of enum prefixing logic.
	[Fixes #70593]

2004-12-21  Mike Kestner  <mkestner@novell.com>

	* glib/Argv.cs : argv marshaling class.
	* glib/Makefile.am : add file.
	* glib/Marshaller.cs : mark the argv methods obsolete.
	* gtk/Application.cs : use GLib.Argv. [Fixes #68812]

2004-12-21  Dan Winship  <danw@novell.com>

	* generator/CallbackGen.cs:
	* generator/CodeGenerator.cs: 
	* generator/ManagedCallString.cs:
	* generator/Property.cs: Remove unused vars

	* generator/Method.cs (GetHashCode): have to implement this since
	we're overriding Equals.

	* generator/CallbackGen.cs: print a message when generating a
	broken struct-returning callback. (Currently affects
	GtkSharp.TextSegSplitFuncNative and
	GtkSharp.TextSegCleanupFuncNative)
