@@ -1,3 +1,9 @@
+2004-12-26  Mike Kestner  <mkestner@novell.com>
+
+	* generator/*Gen.cs : implement IGeneratable fully on GenBase
+	with abstract methods where necessary to refactor a ton of redundant
+	code.
+
 2004-12-23  Mike Kestner  <mkestner@novell.com>
 
 	* glib/ClassInitializerAttribute.cs : new attr for identifying type.
